Added first post

--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,20 @@
     <main>
       
 <div class="wrap pt-2 mt-2">
+  
+  <article class="article mb-2">
+    <a href=https://example.org/posts/my-first-post/  class=grid-reverse >
+      <div class=article_thumb style='background-image: url(https://example.org/images/thumbnail.svg)'></div>
+      <div class="article_meta  center_y ">
+        <time class="post_date">August 08, 2024</time>
+        <h3 class="article_title">My First Post</h3>
+        <div class="article_excerpt  visible ">
+        <p>Introduction This is bold text, and this is emphasized text.
+Visit the Hugo website!</p>
+        </div>
+      </div>
+    </a>
+  </article><div class="grid-2 article_showcase">
 </div>
 <a href='https://example.org/posts/' class=post_nav><span class=post_next>View Archive
   <svg class="icon icon_scale">
